crates/squawk_parser/src/snapshots/squawk_parser__test__create_table_err.snap
---
source: crates/squawk_parser/src/test.rs
input_file: crates/squawk_parser/test_data/err/create_table.sql
---
SOURCE_FILE
  CREATE_TABLE
    COMMENT "-- with missing table name"
    WHITESPACE "\n"
    CREATE_KW "create"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    TABLE_ARGS
      L_PAREN "("
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "sensor_id"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INTEGER_KW "INTEGER"
      WHITESPACE "\n"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_TABLE
    COMMENT "-- missing type"
    WHITESPACE "\n"
    CREATE_KW "create"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "t"
    WHITESPACE " "
    TABLE_ARGS
      L_PAREN "("
      COLUMN
        NAME_REF
          IDENT "a"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_TABLE
    COMMENT "-- trailing comma"
    WHITESPACE "\n"
    CREATE_KW "create"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "t"
    WHITESPACE " "
    TABLE_ARGS
      L_PAREN "("
      COLUMN
        NAME_REF
          IDENT "a"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                TEXT_KW "text"
      ERROR
        COMMA ","
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_TABLE
    COMMENT "-- missing columns / constraints"
    WHITESPACE "\n"
    CREATE_KW "create"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "t"
    WHITESPACE " "
    TABLE_ARGS
      L_PAREN "("
      COMMA ","
      COMMA ","
      COMMA ","
      COMMA ","
      ERROR
        COMMA ","
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_TABLE
    COMMENT "-- a column list with SET DEFAULT is only supported for ON DELETE actions"
    WHITESPACE "\n"
    CREATE_KW "create"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "t"
    WHITESPACE " "
    TABLE_ARGS
      L_PAREN "("
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "a"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
      COMMA ","
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "b"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
        WHITESPACE " "
        REFERENCES_CONSTRAINT
          REFERENCES_KW "references"
          WHITESPACE " "
          PATH
            PATH_SEGMENT
              NAME_REF
                IDENT "bar"
          WHITESPACE " "
          ON_KW "on"
          WHITESPACE " "
          UPDATE_KW "update"
          WHITESPACE " "
          CASCADE_KW "cascade"
      COMMA ","
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "c"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
        WHITESPACE " "
        REFERENCES_CONSTRAINT
          REFERENCES_KW "references"
          WHITESPACE " "
          PATH
            PATH_SEGMENT
              NAME_REF
                IDENT "bar"
          WHITESPACE " "
          ON_KW "on"
          WHITESPACE " "
          UPDATE_KW "update"
          WHITESPACE " "
          SET_KW "set"
          WHITESPACE " "
          NULL_KW "null"
      COMMA ","
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "d"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
        WHITESPACE " "
        REFERENCES_CONSTRAINT
          REFERENCES_KW "references"
          WHITESPACE " "
          PATH
            PATH_SEGMENT
              NAME_REF
                IDENT "bar"
          WHITESPACE " "
          ON_KW "on"
          WHITESPACE " "
          UPDATE_KW "update"
          WHITESPACE " "
          SET_KW "set"
          WHITESPACE " "
          DEFAULT_KW "default"
      COMMA ","
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "e"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
        WHITESPACE " "
        REFERENCES_CONSTRAINT
          REFERENCES_KW "references"
          WHITESPACE " "
          PATH
            PATH_SEGMENT
              NAME_REF
                IDENT "bar"
          WHITESPACE " "
          ON_KW "on"
          WHITESPACE " "
          UPDATE_KW "update"
          WHITESPACE " "
          SET_KW "set"
          WHITESPACE " "
          DEFAULT_KW "default"
          WHITESPACE " "
          L_PAREN "("
          NAME_REF
            IDENT "a"
          COMMA ","
          WHITESPACE " "
          NAME_REF
            IDENT "b"
          COMMA ","
          WHITESPACE " "
          NAME_REF
            IDENT "c"
          R_PAREN ")"
      WHITESPACE "\n"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  CREATE_TABLE
    COMMENT "-- conflicting options"
    WHITESPACE "\n"
    CREATE_KW "create"
    WHITESPACE " "
    UNLOGGED_KW "unlogged"
    WHITESPACE " "
    TABLE_KW "table"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          IDENT "t"
    WHITESPACE " "
    TABLE_ARGS
      L_PAREN "("
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "a"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
        WHITESPACE " "
        GENERATED_CONSTRAINT
          GENERATED_KW "generated"
          WHITESPACE " "
          ALWAYS_KW "always"
          WHITESPACE " "
          AS_KW "as"
          WHITESPACE " "
          IDENTITY_KW "identity"
      COMMA ","
      WHITESPACE "\n  "
      COLUMN
        NAME_REF
          IDENT "b"
        WHITESPACE " "
        PATH_TYPE
          PATH
            PATH_SEGMENT
              NAME_REF
                INT_KW "int"
        WHITESPACE " "
        GENERATED_CONSTRAINT
          GENERATED_KW "generated"
          WHITESPACE " "
          ALWAYS_KW "always"
          WHITESPACE " "
          AS_KW "as"
          WHITESPACE " "
          IDENTITY_KW "identity"
          WHITESPACE " "
          SEQUENCE_OPTION_LIST
            L_PAREN "("
            WHITESPACE "\n    "
            AS_KW "as"
            WHITESPACE " "
            PATH_TYPE
              PATH
                PATH_SEGMENT
                  NAME_REF
                    BIGINT_KW "bigint"
            WHITESPACE "\n    "
            CACHE_KW "cache"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "100"
            WHITESPACE "\n    "
            INCREMENT_KW "increment"
            WHITESPACE " "
            BY_KW "by"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "10"
            WHITESPACE "\n    "
            INCREMENT_KW "increment"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "10"
            WHITESPACE "\n    "
            SEQUENCE_KW "sequence"
            WHITESPACE " "
            NAME_KW "name"
            WHITESPACE " "
            NAME_REF
              IDENT "foo"
            WHITESPACE "\n    "
            RESTART_KW "restart"
            WHITESPACE " "
            WITH_KW "with"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "500"
            WHITESPACE "\n    "
            LOGGED_KW "logged"
            WHITESPACE "\n    "
            UNLOGGED_KW "unlogged"
            WHITESPACE "\n    "
            START_KW "start"
            WHITESPACE " "
            WITH_KW "with"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "10"
            WHITESPACE "\n    "
            START_KW "start"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "25"
            WHITESPACE "\n    "
            OWNED_KW "owned"
            WHITESPACE " "
            BY_KW "by"
            WHITESPACE " "
            NONE_KW "none"
            WHITESPACE "\n    "
            OWNED_KW "owned"
            WHITESPACE " "
            BY_KW "by"
            WHITESPACE " "
            PATH
              PATH
                PATH_SEGMENT
                  NAME_REF
                    IDENT "fooo"
              DOT "."
              PATH_SEGMENT
                NAME_REF
                  IDENT "bar"
            WHITESPACE "\n    "
            MAXVALUE_KW "maxvalue"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "70"
            WHITESPACE "\n    "
            MINVALUE_KW "minvalue"
            WHITESPACE " "
            LITERAL
              INT_NUMBER "150"
            WHITESPACE "\n    "
            NO_KW "no"
            WHITESPACE " "
            MINVALUE_KW "minvalue"
            WHITESPACE "\n    "
            NO_KW "no"
            WHITESPACE " "
            CYCLE_KW "cycle"
            WHITESPACE "\n    "
            NO_KW "no"
            WHITESPACE " "
            MAXVALUE_KW "maxvalue"
            WHITESPACE "\n    "
            CYCLE_KW "cycle"
            WHITESPACE "\n  "
            R_PAREN ")"
      WHITESPACE "\n"
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n"
---
ERROR@39: expected path name
ERROR@99: expected type name
ERROR@143: unexpected trailing comma
ERROR@201: unexpected trailing comma
